2009-03-05  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsmountinfo.c:
	Updated .xdg-volume-info format as per bug 551403:
	+ Group name is "Volume Info"
	+ Icon is not translated
	+ support IconFile key

2009-03-05  Alexander Larsson  <alexl@redhat.com>

        * monitor/hal/ghaldrive.c:
        * monitor/hal/ghalmount.c:
        * monitor/hal/ghalvolume.c:
        * monitor/hal/ghalvolumemonitor.c:
	Remove all locking (not needed since we're now
	a single threaded process).
	Don't emit signals in idle, thus risking callback
	reordering. We don't need this anymore as it was
	part of the locking structure.

	This should fix the "No mount object for mounted
	volume" error when mounting.

2009-03-05  Alexander Larsson  <alexl@redhat.com>

	Bug 564003 – gvfs Cygwin patches
	
	* common/Makefile.am:
	Add -no-undefined required for cygwin build

2009-03-05  Alexander Larsson  <alexl@redhat.com>

	Bug 569199 – incorrectly open smb workgroup using a space
	
	* client/gvfsuriutils.c (g_vfs_encode_uri),
	(g_vfs_decode_uri):
	Escape and unescape host part too. This means we handle
	e.g. smb workgroups with spaces in them. Allowing
	escapes in hostnames complies with RFC 3986.

	* client/gdaemonvfs.c (get_mountspec_from_uri): 
	Fix indentation
	
2009-03-05  Alexander Larsson  <alexl@redhat.com>

	Bug 573381 – Memory leak in ftp_connection_parse_features()
	
	* daemon/gvfsbackendftp.c (ftp_connection_parse_features):
	Don't leak supported.

2009-03-04  Alexander Larsson  <alexl@redhat.com>

	Bug 573837 – gvfs-fuse does not support ftruncate size != 0

        * client/gvfsfusedaemon.c:
	Support ftruncate to the current size as a NOP.
	Fixes OOo saving

2009-03-04  Alexander Larsson  <alexl@redhat.com>

	* monitor/proxy/gproxyvolumemonitor.c:
	Break circular dependencies on dispose.

2009-03-03  Alexander Larsson  <alexl@redhat.com>

	Bug 561172 – gnome-open fails on local URIs with anchors

        * programs/gvfs-open.c: