@@ -1,3 +1,13 @@
+2009-03-06  Alexander Larsson  <alexl@redhat.com>
+
+        * client/gdaemonfileinputstream.c:
+        (iterate_read_state_machine):
+        (iterate_close_state_machine):
+        (iterate_seek_state_machine):
+        (iterate_query_state_machine):
+	Don't send cancel when partial header read, as that
+	would throw away the part of the headers read so far.
+
 2009-03-05  Alexander Larsson  <alexl@redhat.com>
 
         * common/gvfsmountinfo.c:
